[gd_scene load_steps=7 format=3 uid="uid://c58m50c3s6pwj"]

[ext_resource type="Script" uid="uid://cetxqdmk0a2te" path="res://scripts/day_end_summary.gd" id="1_7fip2"]
[ext_resource type="AudioStream" uid="uid://cr48iy7uvaeea" path="res://assets/sound/coin.wav" id="2_c636o"]
[ext_resource type="AudioStream" uid="uid://d16fau6n418cf" path="res://assets/sound/tap.wav" id="3_u74yu"]

[sub_resource type="Animation" id="Animation_7fip2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/DayLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer/CoinGainLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/GainLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer/CoinSpendLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer/SpendLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer/TotalEarnLabel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PanelContainer/EarnLabel:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("OKButton:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("TapSound:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CoinSound:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_68vok"]
resource_name = "reveal"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/DayLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer/CoinGainLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/GainLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer/CoinSpendLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer/SpendLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer/TotalEarnLabel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PanelContainer/EarnLabel:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("OKButton:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("TapSound:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CoinSound:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xq2ov"]
_data = {
&"RESET": SubResource("Animation_7fip2"),
&"reveal": SubResource("Animation_68vok")
}

[node name="DayEndSummary" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7fip2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.236334, 0.236334, 0.236334, 1)

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 32.0
offset_right = -64.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2

[node name="DayLabel" type="Label" parent="PanelContainer"]
visible = false
layout_mode = 2
offset_left = 72.0
offset_top = 4.0
offset_right = 120.0
offset_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Day 99"

[node name="CoinGainLabel" type="Label" parent="PanelContainer"]
visible = false
layout_mode = 2
offset_left = 24.0
offset_top = 28.0
offset_right = 96.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Coin gain"

[node name="GainLabel" type="Label" parent="PanelContainer"]
visible = false
layout_mode = 2
offset_left = 104.0
offset_top = 28.0
offset_right = 168.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(5.43877e-06, 0.761526, 0.241346, 1)
theme_override_font_sizes/font_size = 12
text = "9999"
horizontal_alignment = 2

[node name="CoinSpendLabel" type="Label" parent="PanelContainer"]
visible = false
layout_mode = 2
offset_left = 24.0
offset_top = 52.0
offset_right = 104.0
offset_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Coin spend"

[node name="SpendLabel" type="Label" parent="PanelContainer"]
visible = false
layout_mode = 2
offset_left = 104.0
offset_top = 52.0
offset_right = 168.0
offset_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.863115, 0.244562, 0.284142, 1)
theme_override_font_sizes/font_size = 12
text = "9999"
horizontal_alignment = 2

[node name="TotalEarnLabel" type="Label" parent="PanelContainer"]
visible = false
layout_mode = 2
offset_left = 24.0
offset_top = 76.0
offset_right = 104.0
offset_bottom = 88.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Total earn"

[node name="EarnLabel" type="Label" parent="PanelContainer"]
visible = false
layout_mode = 2
offset_left = 104.0
offset_top = 76.0
offset_right = 168.0
offset_bottom = 88.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "9999"
horizontal_alignment = 2

[node name="OKButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -36.0
offset_right = 16.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "OK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xq2ov")
}

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_c636o")

[node name="TapSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_u74yu")

[connection signal="pressed" from="OKButton" to="." method="_on_ok_button_pressed"]
